...
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cmmsdk_fl_camera" />

        <tv.camment.cammentsdk.views.RecordingButton
            android:id="@+id/cmmsdk_ib_record"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/cmmsdk_camment_icon_shadow"
...
